media queries added

--- a/agency.html
+++ b/agency.html
@@ -23,7 +23,10 @@
         <section id="section-a" class="grid">
             <div class="content-wrap">
                 <h2 class="content-title">Web & Application Development</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum quisquam, fugit explicabo, odit voluptatum nostrum harum neque aperiam ratione facilis suscipit repellendus. Eos a culpa sed quae laudantium officiis debitis odio reiciendis, molestiae, praesentium provident placeat nisi, maxime dolorem perferendis!</p>
+                <div class="content-text">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum quisquam, fugit explicabo, odit voluptatum nostrum harum neque aperiam ratione facilis suscipit repellendus. Eos a culpa sed quae laudantium officiis debitis odio reiciendis, molestiae, praesentium provident placeat nisi, maxime dolorem perferendis!</p>
+                </div>
+                
             </div>
         </section>
 
